Time: 2 ms (70.93%) | Memory: 46.5 MB (34.11%) - LeetSync